--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/scrolling-nav.css" rel="stylesheet">
   <link href="assets/style.css" rel="stylesheet">
   <script src="assets/script.js" type="text/javascript"></script>
 
 
 </head>
 
-<body id="page-top">
+
 
   <!-- Navigation -->
   <header id="navbar">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-green" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-green" id="Nav">
     <div class="container-fluid px-3 px-lg-5">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/j-logo.svg" height="90px;" style="padding-top: 10px; padding-bottom: 20px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,8 +50,11 @@
   </nav>
   </header>
 
+<div class="container-flud">
+	
+	
   <div class="bg-green section text-white d-flex align-items-end py-5">
-    <div class="container-fluid text-left p-5">
+    <div class="text-left p-5">
 		<h1 class="title">+Jakarta Sans</h1>
 		          <p class="subtitle">Open-source Fonts for Jakarta City of Collaboration</p>
 
@@ -460,6 +462,7 @@
       </div>
     </div>     
   </section>
+</div>
 
   <!-- Footer -->
   <footer class="py-5 bg-blue">
@@ -512,6 +515,7 @@
 </style>
 
 
+
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -525,3 +529,6 @@
 </body>
 
 </html>
+</div>
+
+</div>
