--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Navigation -->
   <header id="navbar">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-green" id="Nav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-green" id="mainNav">
     <div class="container-fluid px-3 px-lg-5">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/j-logo.svg" height="90px;" style="padding-top: 10px; padding-bottom: 20px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
