fixed small bugs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Navigation -->
   <header id="navbar">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-green" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black" id="mainNav">
     <div class="container-fluid px-3 px-lg-5">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/j-logo.svg" height="90px;" style="padding-top: 10px; padding-bottom: 20px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
 <div class="container-flud">
 	
 	
-  <div class="bg-green section text-white d-flex align-items-end py-5">
+  <div class="bg-black section text-white d-flex align-items-end py-5">
     <div class="text-left p-5">
 		<h1 class="title">+Jakarta Sans</h1>
 		          <p class="subtitle">Open-source Fonts for Jakarta City of Collaboration</p>
@@ -75,7 +75,7 @@
   </section>
 
   <section id="tester" class="bg-white section-content bg-green">
-    <div class="section-content bg-blue px-3 px-lg-5 py-5">
+    <div class="section-content bg-jingga px-3 px-lg-5 py-5">
 	   <div class="row"> 
         <div class="col-lg-3 py-3">  
         <select size="1" id="fontFamilySelector" class="custom-select" name="fontFamilySelector" onchange="changeFont()">
@@ -465,7 +465,7 @@
 </div>
 
   <!-- Footer -->
-  <footer class="py-5 bg-blue">
+  <footer class="py-5 bg-black">
     <div class="container-fluid px-5">
 	    <div class="row">
 		<div class="col-lg-6 col-sm-12">    
